tests/ui/asm/named_const_simd_vec_len.stderr
error: cannot use value of type `Foo` for inline assembly
  --> $DIR/named_const_simd_vec_len.rs:17:27
   |
LL |         src = in(xmm_reg) a,
   |                           ^
   |
   = note: only integers, floats, SIMD vectors, pointers and function pointers can be used as arguments for inline assembly

error: aborting due to 1 previous error

